# i-hate-all-rss-readers

./: .drone.yml  .gitignore  README.md  meson.build
meson_helpers/: grabber.sh
src/lib/: env.cpp  env.hpp  feed.cpp  feed.hpp  logging.cpp  logging.hpp  meson.build  utils.cpp  utils.hpp
src/lib/config/: config.cpp  config.hpp
src/lib/package/: package.cpp  package.hpp
src/lib/path/: path.cpp  path.hpp
src/qt_client/iharr/: comm.cpp  comm.h  config.cpp  config.hpp  feed.cpp  feed.hpp  feeds_commands.cpp  feeds_commands.hpp  iharr.files  iharr.includes  main.cpp  meson.build
src/qt_client/iharr/widgets/: configuration.cpp  configuration.h  configuration.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newchannel.cpp  newchannel.h  newchannel.ui
src/server/: config.cpp  config.hpp  iharr.cpp  iharr.hpp  main.cpp  meson.build
src/server/commands/: executer.cpp  executer.hpp
src/server/db/: db.cpp  db.hpp
src/server/networking/: comm.cpp  comm.hpp
src/tests/: db_test.cpp  meson.build
